--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>吹奏楽部公式ホームページ</title>
+    <title>常滑高校吹奏楽部</title>
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru:wght@400;500;700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
@@ -197,7 +197,7 @@
     <nav>
         <div class="logo">
             <img src="img/icon.png" alt="吹奏楽部アイコン">
-            <span>吹奏楽部</span>
+            <span>常滑高校吹奏楽部</span>
         </div>
         <div class="hamburger">
             <div></div>
@@ -212,13 +212,13 @@
     </nav>
 
     <header>
-        <h1>吹奏楽部公式ホームページへようこそ！</h1>
-        <p>音楽を愛するすべての人へ。</p>
+        <h1>タイトル</h1>
+        <p>サブタイトル</p>
     </header>
 
     <section id="about">
         <h2>私たちについて</h2>
-        <p>私たちの吹奏楽部は地域の文化を支える活動を行っています。</p>
+        <p>内容</p>
     </section>
 
     <section id="events">
@@ -231,18 +231,18 @@
         <h2>お問い合わせ</h2>
         <p>興味のある方はお気軽にお問い合わせください。</p>
         <div class="contact-buttons">
-            <a href="mailto:tknm.bbc@gmail.com" class="contact-button">メールで連絡</a>
-            <a href="https://www.instagram.com/official_account" target="_blank" class="contact-button">インスタグラムで連絡</a>
+            <a href="mailto:tknm.bbc@gmail.com" class="contact-button">メール</a>
+            <a href="https://www.instagram.com/toko_sui/" target="_blank" class="contact-button">インスタグラム</a>
         </div>
     </section>
 
     <footer>
-        <p>&copy; 2025 吹奏楽部公式ホームページ</p>
+        <p>&copy; 2025 常滑高校吹奏楽部</p>
         <div class="social-links">
             <a href="mailto:tknm.bbc@gmail.com" title="メール">
                 <i class="fas fa-envelope"></i>
             </a>
-            <a href="https://www.instagram.com/official_account" target="_blank" title="Instagram">
+            <a href="https://www.instagram.com/toko_sui/" target="_blank" title="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
