--- a/events.html
+++ b/events.html
@@ -26,16 +26,16 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>秋の音楽祭</td>
-                    <td>2025年10月10日</td>
-                    <td>常滑文化会館</td>
-                    <td>無料</td>
+                    <td>第9回定期演奏会</td>
+                    <td>2025/03/30</td>
+                    <td>常滑市民文化会館</td>
+                    <td>入場料無料</td>
                 </tr>
                 <tr>
-                    <td>春の演奏会</td>
-                    <td>2026年4月15日</td>
-                    <td>常滑市立ホール</td>
-                    <td>要予約</td>
+                    <td>未定</td>
+                    <td>未定</td>
+                    <td>未定</td>
+                    <td>未定</td>
                 </tr>
             </tbody>
         </table>
